Fix overflow problem in Authors tab.

--- a/JataakaTeamwork/games/splashscreen/styles/style.less
+++ b/JataakaTeamwork/games/splashscreen/styles/style.less
@@ -107,7 +107,6 @@ body {
                     height: 100%;
                     width: 100%;
                     padding: 25px 0;
-                    overflow: auto;
 
                     * {
                     }
@@ -123,8 +122,8 @@ body {
 
                     #authors-wrapper {
                         width: 800px;
-                        margin: auto;
-                        height: 75%;
+                        margin: 100px auto;
+                        height: 60%;
                         overflow: auto;
 
                         .col {
